--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -37,12 +37,13 @@ h6 {
   font-family: "Playfair Display", Cambria, Cochin, Georgia, Times,
     "Times New Roman", serif;
   margin: 0.25rem 0;
+  letter-spacing: 1px;
 }
 
 h1 {
-  font-size: 2.5em;
+  font-size: 2.125rem;
   color: #fff8f8;
-  line-height: 1.25;
+  line-height: 1.147058824;
 }
 
 h2 {
@@ -117,10 +118,16 @@ pre {
     5px 5px 5px / round;
 }
 
+footer {
+  font-size: 0.9em;
+}
+
 .layout {
   min-height: calc(100vh - 2rem);
+  max-width: 600px;
   display: flex;
   flex-direction: column;
-  margin: 1em;
+  margin: 0 auto;
+  padding: 1em;
   justify-content: space-between;
 }
